--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,7 +1,13 @@
-
 $font-stack: 1em "Open Sans", Ubuntu, Sans-Serif;
 
-html, body {
+//Global components
+@import 'globals/grids';
+
+//React components
+@import 'components/login';
+
+//General
+html, body, #root {
   width: 100%;
   height: 100%;
   padding: 0;
