Added dashboard Added nav bar Added start of repo select Added reducers for repos Added dev tools bindings Added styles Connected state to Dashboard, Nav, and Repos

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -5,6 +5,8 @@ $font-stack: 1em "Open Sans", Ubuntu, Sans-Serif;
 
 //React components
 @import 'components/login';
+@import 'components/dashboard';
+@import 'components/nav';
 
 //General
 html, body, #root {
