Added flex-center option for grids

--- a/app/assets/stylesheets/globals/grids.scss
+++ b/app/assets/stylesheets/globals/grids.scss
@@ -31,6 +31,11 @@
 }
 
 //Content justification
+.flex-center {
+  align-items: center;
+  justify-content: center;
+}
+
 .justify-center {
   justify-items: center;
 }
