Import repo styles

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -7,6 +7,7 @@ $font-stack: 1em "Open Sans", Ubuntu, Sans-Serif;
 @import 'components/login';
 @import 'components/dashboard';
 @import 'components/nav';
+@import 'components/repo';
 
 //General
 html, body, #root {
