--- a/app/assets/stylesheets/components/repo.scss
+++ b/app/assets/stylesheets/components/repo.scss
@@ -1,13 +1,19 @@
-$button-color: #5a5f71;
-$button-hover: #323646;
+$button-color: #1E1E28;
+$button-hover: #171720;
 
 $ui-color: #4D526B;
 $ui-font-color-alt: #fffcfc;
 
-$margins: 50px;
+$ui-color-run: #2f2f41;
+$ui-color-run-odd: #373b50;
+
+$margins: 40px;
 
 .button {
-
+  padding: 10px 10px;
+  color: $ui-font-color-alt;
+  background-color: #3b993d;
+  cursor: pointer;
 }
 
 #repo-view {
@@ -40,10 +46,6 @@ $margins: 50px;
 }
 
 #repo-header > .button {
-  padding: 10px 10px;
-  color: $ui-font-color-alt;
-  background-color: #3b993d;
-  cursor: pointer;
   float: right;
 }
 
@@ -53,12 +55,70 @@ $margins: 50px;
   margin-top: 5px;
   color: $ui-font-color-alt;
   font-size: 1em;
+  border-collapse: collapse;
 }
 
 #repo-runs-table > thead > tr > th:not(:first-child) {
-  width: 15%;
+  width: 20%;
 }
 
 #repo-runs-table > thead > tr > th:last-child {
-  width: 20%;
+  width: 25%;
+}
+
+.repo-run {
+  height: 75px;
+  border-style: hidden;
+}
+
+.repo-run:nth-child(odd) {
+  background-color: $ui-color-run;
+}
+
+.repo-run:nth-child(even) {
+  background-color: $ui-color-run-odd;
+}
+
+.repo-run-commit > div {
+  display: inline-block;
+  margin: 12px 0;
+}
+
+.repo-run-commit > div > svg {
+  width: 20px !important;
+  margin-left: 8px;
+  margin-right: 5px;
+}
+
+.repo-run-datastream-button {
+  padding: 8px 5px;
+  background-color: $button-color;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.repo-run-datastream-button:hover {
+  background-color: $button-hover;
+}
+
+.repo-run-status {
+  width: max-content;
+  padding: 5px 10px;
+  border-radius: 3px;
+}
+
+.status-blue {
+  background-color: #48a7ff;
+}
+
+.status-green {
+  background-color: #3fbf58;
+}
+
+.status-red {
+  background-color: #ac161b;
+}
+
+.repo-run-status > span {
+  margin-left: 10px;
 }
