--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -28,7 +28,6 @@ $ui-font-color: #edeaea;
 }
 
 .nav-item {
-  margin-bottom: 25px;
   border-radius: 4px;
   display: table;
   text-align: center;
@@ -36,6 +35,7 @@ $ui-font-color: #edeaea;
   height: 25px;
   padding: 10px;
   cursor: pointer;
+  margin-bottom: auto;
 }
 
 .nav-item:hover {
@@ -133,9 +133,12 @@ $ui-font-color: #edeaea;
 }
 
 #nav-user {
-  position: fixed;
-  bottom: 10px;
   width: 50px;
+  height: 50px;
+  margin-bottom: 15px;
+  border-radius: 50%;
+  background-color: $button-hover;
+  cursor: pointer;
 }
 
 #nav-user > img {
