Added stream style import

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -8,6 +8,7 @@ $font-stack: 1em "Open Sans", Ubuntu, Sans-Serif;
 @import 'components/dashboard';
 @import 'components/nav';
 @import 'components/repo';
+@import 'components/stream';
 
 //General
 html, body, #root {
