Switched to font awesome css Removed font awesome fix hack code

--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -81,7 +81,7 @@ $ui-font-color: #edeaea;
   cursor: text;
 }
 
-#repos-search > svg {
+#repos-search > i {
   margin-top: 7px;
   margin-left: 10px;
   color: $ui-font-color;
@@ -126,7 +126,7 @@ $ui-font-color: #edeaea;
   background-color: $button-hover;
 }
 
-#repos-add > svg {
+#repos-add > i {
   margin-top: 7px;
   margin-left: 10px;
   color: $ui-font-color;
@@ -190,7 +190,7 @@ $ui-font-color: #edeaea;
   background-color: #13151f;
 }
 
-#user-api-key > svg {
+#user-api-key > i {
   margin-top: 7px;
   margin-left: 10px;
   color: $ui-font-color;
