--- a/app/assets/stylesheets/components/repo.scss
+++ b/app/assets/stylesheets/components/repo.scss
@@ -84,7 +84,7 @@ $margins: 40px;
   margin: 12px 0;
 }
 
-.repo-run-commit > div > svg {
+.repo-run-commit > div > i {
   width: 20px !important;
   margin-left: 8px;
   margin-right: 5px;
