--- a/app/assets/stylesheets/components/repo.scss
+++ b/app/assets/stylesheets/components/repo.scss
@@ -20,6 +20,21 @@ $margins: 40px;
   width: 100%;
   height: 100%;
   background-color: #4D526B;
+  overflow-y: auto;
+}
+
+#repo-view::-webkit-scrollbar {
+  width: 12px;
+}
+
+#repo-view::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+  border-radius: 5px;
+}
+
+#repo-view::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.75);
 }
 
 #repo-dash {
