--- a/app/assets/stylesheets/components/stream.scss
+++ b/app/assets/stylesheets/components/stream.scss
@@ -7,6 +7,22 @@ $ui-font-color: #edeaea;
   overflow-y: auto;
 }
 
+#stream-view::-webkit-scrollbar {
+  width: 12px;
+}
+
+#stream-view::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.15);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+  border-radius: 10px;
+}
+
+#stream-view::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.15);
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.75);
+}
+
 #stream-connection {
   position: fixed;
   color: #1196d6;
